Fix z-index rules for striped list element

--- a/packages/website/src/style/components.css
+++ b/packages/website/src/style/components.css
@@ -6,7 +6,7 @@
   }
 
   .striped-list-element {
-    & > * {
+    & * {
       @apply z-10;
     }
 
